--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
- {
-  "name"         : "hackathon-solarcalc",
-  "version"      : "0.0.1",
-  "description"  : "Startupbootcamp Hackathon 2014 App",
-  "main"         : "server.js",
-  "author"       : "TBD",
-  "dependencies" : {
-    "express"    : "4.4.1",
-    "underscore" : "1.6.0",
-    "jade"       : "1.3.1"
-    }
+{
+  "name": "hackathon-solarcalc",
+  "version": "0.0.1",
+  "description": "Startupbootcamp Hackathon 2014 App",
+  "main": "server.js",
+  "author": "TBD",
+  "dependencies": {
+    "express": "4.4.1",
+    "underscore": "1.6.0",
+    "jade": "1.3.1",
+    "ejs": "~1.0.0"
   }
+}
