--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "underscore": "1.6.0",
     "jade": "1.3.1",
     "ejs": "~1.0.0"
+  },
+  {
+    "engines": {
+      "node": "0.10.x"
+    }
   }
 }
